[package]
name = "custom-timings"
version = "0.1.0"
authors = ["Roberto Guillén"]
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "custom-timings"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
ws2812-avr = { path = "../../ws2812-avr" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["sparkfun-promicro"]